# cppm-a3

./: .flake8  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  CI_CD_DOCUMENTATION.md  Dockerfile  Predicting_Car_Price.ipynb  README.md  app.py  docker-compose.yml  docker_compose_Deploy.yml  docker_compose_a3.yml  mlflow.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_app.py  transition.py  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml  deploy.yml  release.yml  security.yml  test-model-staging.yml  testing.yml
assets/: A2_Predicting_Car_Price.ipynb  A3_Predicting_Car_Price.ipynb  classification_report.csv  classification_report_Cars.csv.txt  classification_report_test.txt  landing.css  model_method_mini_init_zero.joblib
assets/mlruns/0/: meta.yaml
assets/mlruns/255694117813490762/: meta.yaml
backend/: app.py  requirements.txt
data/: Cleaned_Cars.csv  classification_report.csv  feature_columns.csv
mlruns/0/: meta.yaml
mlruns/155759194128924535/: meta.yaml
mlruns/155759194128924535/004347e59d014ac692a4eb84b9fb5c86/: meta.yaml
models/: brand_encoder.pkl  cppm_a1_scaler.pkl  cppm_a2_model.pkl  cppm_a2_scaler.pkl  cppm_a3_encoder.pkl  cppm_a3_model.pkl  cppm_a3_scaler.pkl
pages/: a3_model.py  cppm_a1_dash.py  landing.py  new_model.py  old_model.py  visualization.py
src/cppm_a3/: __init__.py  predictor.py
tests/: __init__.py  test_app_callbacks.py  test_basic.py  test_imports.py  test_init.py  test_model.py  test_model_staging.py  test_predictor.py
(+5611 files in other folders)
