[project]
name = "cppm"
version = "0.1.0"
description = "Car price classification project with logistic regression and MLflow tracking."
authors = [
    { name = "Subhajit Ghosh", email = "mastersubhajit.ghosh2021@uem.edu.in" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "mlflow",
    "matplotlib",
    "ipykernel"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
