[project]
name = "cppm"
version = "0.1.0"
description = "Car price classification project with logistic regression and MLflow tracking."
authors = [
    { name = "Subhajit Ghosh", email = "st125009@ait.asia" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    # Core scientific stack
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "scipy",
    "matplotlib>=3.9.1.post1",
    "seaborn>=0.13.2",
    # ML + DL
    "scikit-learn>=1.5.1",
    "ppscore>=1.1.0",
    "mlflow>=1.27.0",
    "torch==2.8.0",
    "torchvision>=0.19.0",
    # Dashboard / serving
    "dash",
    "dash-bootstrap-components",
    "gunicorn",
    # Dev / notebook
    "ipykernel>=6.29.5",
    "fastapi>=0.118.0",
    "pytest>=8.4.2",
    "uv-test>=0.1.0",
    "pytest-depends>=1.0.1",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
]
